# flat-rating

./: ARCHITECTURE_SPEC.md  CLAUDE.md  docker-compose.yml
back/interpreter/: .dockerignore  .env.example  Dockerfile  finetuning.ipynb  pyproject.toml
back/interpreter/interpreter/: __init__.py  config.py  handlers.py  main.py  summarizer.py
back/migrations/: 001_init.sql
back/rating-crud/: .dockerignore  .env  Dockerfile  package-lock.json  package.json  tsconfig.json
back/rating-crud/src/: index.ts  server.ts
back/rating-crud/src/infrastructure/config/: index.ts
back/rating-crud/src/infrastructure/database/: connection.ts  types.ts
back/rating-crud/src/infrastructure/events/: event-bus.ts  event-types.ts  handlers.ts
back/rating-crud/src/modules/building/: building.controller.ts  building.repository.ts  building.service.ts  building.test.ts  building.types.ts
back/rating-crud/src/modules/comment/: comment.controller.ts  comment.repository.ts  comment.service.ts  comment.test.ts  comment.types.ts
back/rating-crud/src/modules/summary/: summary.controller.ts  summary.repository.ts  summary.service.ts  summary.test.ts  summary.types.ts
back/rating-crud/src/test/: helpers.ts  mock-db.ts  setup.ts
front/: .dockerignore  Dockerfile  package-lock.json  package.json
front/src/app/: page.tsx  search-form.tsx
front/src/app/actions/: buildings.ts  comments.ts
front/src/app/add-apartment/: page.tsx
front/src/app/apartment/[id]/: feedback-form.tsx  page.tsx
